# ElectrochemTools

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  input.txt  input_cleaned.txt
.github/workflows/: ci.yml  release.yml
docs/: audit-2026-07-10.md  current-status.md  matlab-validation.md  release-checklist.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md
examples/: README.md
examples/data/: eis.z60  eis_clean_eis_no_header.csv  eis_cleaned.csv  eis_cleaned.z60  eis_simple.csv
scripts/: export_drttools_matrices.m  package_windows.ps1  regenerate_matlab_golden.m  regenerate_matlab_golden.ps1  run_drttools_reference.m
src/: batch.rs  drt.rs  drt_compare.rs  ecm.rs  eis_io.rs  fit.rs  lib.rs  plot.rs  regularization.rs  run_manifest.rs  types.rs
src/drt/: bayesian.rs  discretization.rs  kernel.rs  regularization.rs  solver.rs
src/eis/: clean.rs  data.rs  format.rs  io.rs  mod.rs  preprocess.rs  validation.rs
tests/: cli_smoke.rs  test_batch.rs  test_drt_end_to_end_golden.rs  test_drt_gaussian_matlab_golden.rs  test_drt_matlab_compare.rs  test_drt_matrix_golden.rs  test_drt_reference_cases.rs  test_drt_synthetic.rs  test_ecm_models.rs  test_eis_io.rs  test_eis_validation.rs  test_plot_svg.rs  test_rqr_fit.rs  test_run_manifest.rs  test_solver_diagnostics.rs
tests/fixtures/: README.md  bayesian_eis.z60  eis_cleaned.csv
tests/golden/drttools/: README.md  eis_clean_matlab_drttools_drt_peaks.csv  eis_clean_matlab_drttools_eis_regression.txt
tests/golden/ecm/: README.md
(+38 files in other folders)
