[package]
name = "ElectrochemTools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
calamine = "0.28.0"
chrono = "0.4.41"
clap =  { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
nalgebra = "0.33"
num-complex = "0.4"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
