[package]
name = "ElectrochemTools"
version = "0.1.0"
edition = "2024"
description = "Command-line tools for cleaning and analyzing electrochemical impedance data"
license = "MIT"
repository = "https://github.com/WaiwaiTAN/ElectrochemTools"
homepage = "https://github.com/WaiwaiTAN/ElectrochemTools"
readme = "README.md"
keywords = ["electrochemistry", "impedance", "eis", "drt"]
categories = ["command-line-utilities", "science"]
rust-version = "1.85"

[lib]
name = "electrochem_tools"

[dependencies]
anyhow = "1.0.98"
calamine = "0.28.0"
chrono = "0.4.41"
clap =  { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
nalgebra = "0.33"
num-complex = "0.4"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
